# robocorp

./: ,  .gitattributes  .gitignore  .project  .pydevproject  CONTRIBUTING.md  LICENSE  README.md  dev.py  dev_requirements.txt  go.work  pyproject.toml  tasks.py
action_server/: .gitignore  README.md  build.py  pyproject.toml  tasks.py
action_server/build-binary/: README.md  downloads_index.py  pyoxidizer.bzl
action_server/docs/: CHANGELOG.md  DEVELOPMENT.md  README.md
action_server/frontend/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
action_server/go-wrapper/: .gitignore  action-server-wrapper  go.mod  main.go
action_server/tests/: conftest.py
actions/: README.md  pyproject.toml  tasks.py
actions/docs/: CHANGELOG.md
actions/tests/: conftest.py
browser/: README.md  pyproject.toml  tasks.py
browser/docs/: CHANGELOG.md  README.md  browser.py.md  changelog.md  release.md  robocorp.browser.browser.md  robocorp.browser.cli.md  robocorp.browser.md
browser/tests/: conftest.py  test_browser_api.py
cli/: .gitignore  CHANGELOG.md  README.md  changelog.md  go.mod  go.sum  index.py  main.go  pyinstaller.spec  pyproject.toml  robo_cli.spec  tasks.py
cli/cmd/: exec.go  export.go  flags.go  lock.go  new.go  root.go  run.go  serve.go  utils.go
cli/config/: config.go
cli/core/: commands.go
cli/environment/: capabilities.go  environment.go  progress.go  ui.go  utils.go
cli/exec/: exec.go
cli/exit/: exit.go
cli/export/: export.go
cli/fatal/: fatal.go
cli/include/: include.go  templates.go
cli/new/: new.go
cli/paths/: paths.go  paths_test.go  paths_unix.go  paths_windows.go
cli/process/: process.go
cli/rcc/: commands.go  progress.go  rcc.go
cli/robo_cli/: app.py  config.py  dummy.py  process.py  rcc.py  templates.py
cli/run/: tasks.go
cli/tasks/: events.go  tasks.go
cli/tests/: test_robo_new.py  test_templates.py  test_validator.py
cli/ui/: messages.go  styles.go  ui.go
core/: README.md  pyproject.toml
core/tests/: conftest.py
devutils/: .mdl_style.rb  .mdlrc  .pylintrc  README.md  cve-update-order.md  dev-env-libraries.yaml  develop-libraries.bat  develop-libraries.sh  development-environment.yaml  pyproject.toml  requirements.txt  ruff.toml
docs/: README.md  TODO.md  changelog.md  format.md  handling_sensitive_data.md  pyproject.toml  release.md  using-with-rcc.md  workitems-email.md
docs/content/: README.md  browser.md  workbook.md  worksheet.md
docs/guides/: using-with-rcc.md
excel/: README.md  pyproject.toml  tasks.py
excel/docs/: CHANGELOG.md  README.md  robocorp.excel.excel.md  robocorp.excel.tables.md  robocorp.excel.workbook.md  robocorp.excel.worksheet.md
excel/tests/: __init__.py  test_excel.py  test_tables.py  workbook_test.py  worksheet_test.py
http/: README.md  pyproject.toml  tasks.py
http/docs/: CHANGELOG.md  README.md  robocorp.http.http.md
http/tests/: test_http.py
integration_tests/: README.md  pyproject.toml  tasks.py
integration_tests/src/: empty.txt
integration_tests/tests/: conftest.py
libs/: .gitignore  README.md  mkdocs.yaml  pyproject.toml
libs/browser/: README.md  pyproject.toml
libs/docs/: README.md  browser.md  excel.md  tables.md  vault.md  workbook.md  worksheet.md
libs/excel/: .gitignore  README.md  pyproject.toml
libs/http/: pyproject.toml
libs/robocorp/: pyproject.toml
libs/tests/: Book2.xlsx  task.py
libs/vault/: pyproject.toml
log/: .gitignore  .project  .pydevproject  README.md  dev.py  package-lock.json  pyproject.toml  tasks.py
log/docs/: CHANGELOG.md  README.md  changelog.md  format.md  handling_sensitive_data.md  release.md  robocorp.log.console.md  robocorp.log.md  robocorp.log.protocols.md  robocorp.log.pyproject_config.md  robocorp.log.redirect.md
log/output-react/: .gitignore  LICENSE  README.md  fileindex.txt  index.html  output.robolog  package-lock.json  package.json  tsconfig.json  vite.config.js
log/output-webview/: README.md  package.json  tsconfig.json
log/tests/: conftest.py
log_pytest/: .gitignore  README.md  pyproject.toml  tasks.py
log_pytest/docs/: CHANGELOG.md  README.md  changelog.md
log_pytest/tests/: conftest.py
logging/: .gitignore  .project  README.md  dev.py  pyproject.toml
logging/docs/: arguments.md  changelog.md  format.md  handling_sensitive_data.md  release.md
logging/output-webview/: .gitignore  README.md  webpack.config.js
logging/src/: setup.py
logging/tests/: .gitignore  conftest.py  test_requirements.txt
meta/: README.md  pyproject.toml  tasks.py
meta/tests/: test_meta.py
storage/: README.md  pyproject.toml  tasks.py
storage/docs/: CHANGELOG.md  README.md  changelog.md  release.md  robocorp.storage.md
storage/tests/: test_environment.py  test_fallback.py  test_storage.py
task_server/: .gitignore  pyproject.toml  tasks.py
task_server/docs/: README.md
task_server/frontend/: README.md  package-lock.json  package.json
tasks/: README.md  dev.py  pyproject.toml  tasks.py  test.py
tasks/docs/: CHANGELOG.md  README.md  changelog.md  release.md  robocorp.tasks.cli.md  robocorp.tasks.md
tasks/tests/: conftest.py
vault/: README.md  pyproject.toml  tasks.py
vault/docs/: CHANGELOG.md  README.md  changelog.md  release.md  robocorp.vault.md  robocorp.vault.vault.md
windows/: README.md  pyproject.toml  tasks.py
windows/docs/: CHANGELOG.md  README.md
windows/tests/: conftest.py
workitems/: README.md  pyproject.toml  tasks.py
workitems/docs/: CHANGELOG.md  README.md  changelog.md  robocorp.workitems.md  robocorp.workitems.workitem.md  robocorp.workitems.workitems.md
workitems/tests/: conftest.py  fixtures.py  mocks.py  test_adapters.py  test_email.py  test_workitems.py
workspace/: README.md  generators.md  openapiconf.yaml  pyproject.toml  tasks.py
workspace/research/: openapi-errors.txt  openapi.json
workspace/src/: .openapi-generator-ignore
workspace/templates/: __init__api.mustache  __init__model.mustache  __init__package.mustache  model_generic.mustache
workspace/tests/: test_process.py
(+2453 files in other folders)
