[tool.poetry]
name = "robocorp-action-server"
version = "0.0.5"
description = "Robocorp local task server"
authors = ["Fabio Zadrozny <fabiofz@gmail.com>"]
readme = "README.md"
repository = "https://github.com/robocorp/robo/"
license = "Apache-2.0"
packages = [{ include = "robocorp", from = "src" }]
include = [
	"src/robocorp/action_server/_static_contents.py",
	"src/robocorp/action_server/bin/rcc.exe",
	"src/robocorp/action_server/bin/rcc",
]

[tool.poetry.scripts]
action-server = "robocorp.action_server.cli:main"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
jsonschema = "^4.19.2"
PyYAML = "^6"
robocorp-actions = "^0.0.2"
websockets = "^12.0"
requests = "^2"
psutil = "^5"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }
types-requests = "^2"
types-PyYAML = "^6"
robocorp-log-pytest = "^0.0.1"
types-psutil = "^5"


[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
