[tool.poetry]
name = "robocorp-action-server"
version = "0.0.28"
description = "Robocorp local task server"
authors = [
	"Fabio Z. <fabio@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{ include = "robocorp", from = "src" }]
include = [
	"src/robocorp/action_server/_static_contents.py",
	"src/robocorp/action_server/bin/rcc.exe",
	"src/robocorp/action_server/bin/rcc",
]

[tool.poetry.scripts]
action-server = "robocorp.action_server.cli:main"


[tool.poetry.dependencies]
# Important: when these versions change, pyoxidizer.bzl needs
# to be updated too for the binary build.
# This should be updated. See: https://github.com/robocorp/robocorp/issues/173
fastapi = "^0.110.0"
fastjsonschema = "^2.19.1"
jsonschema = "^4.19.2"
msgspec = "^0.18"
psutil = "^5"
pydantic = "^2.4.2"
pyyaml = "^6"
python = "^3.10"
requests = "^2"
robocorp-actions = "^0.0.7"
termcolor = "^2.4.0"
uvicorn = "^0.23.2"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }
types-requests = "^2"
types-PyYAML = "^6"
robocorp-log-pytest = "^0.0.2"
types-psutil = "^5"


[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
