[tool.poetry]
name = "robocorp-actions"
version = "0.1.0"
description = "Robocorp Actions"
authors = [
	"Fabio Z. <fabio@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{ include = "robocorp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

# robocorp-actions is tighly coupled with robocorp-tasks, so,
# the version must be an exact match up to the minor version.
robocorp-tasks = "3.0.0"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }

# We just need it for tests. In runtime duck-typing is used to
# check for `cls.parse_obj(dict)` and `cls.model_json_schema()`
pydantic = "^2.6"


[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
