[tool.poetry]
name = "robocorp-browser"
version = "2.4.0"
description = "Robocorp browser automation library"
authors = ["Sema4.ai <dev@sema4.ai>"]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{ include = "robocorp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.50.0"
robocorp-tasks = ">=1,<5"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src:tests"

[tool.lazydocs]
validate = "true"
