[tool.poetry]
name = "robocorp-core"
version = "0.1.2"
description = "The automation framework for Python"
authors = [
	"Ossi R. <ossi@robocorp.com>",
	"Fabio Z. <fabio@robocorp.com>",
	"Kerkko P. <kerkko@robocorp.com>",
]
readme = "README.md"
packages = [{include = "robo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
robocorp-logging = "^0.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.255"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
pytest-regressions = "1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
