[tool.poetry]
name = "robocorp-core"
version = "0.1.3"
description = "The automation framework for Python"
authors = [
	"Fabio Zadrozny <fabio@robocorp.com>",
]
readme = "README.md"
packages = [{include = "robo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
robocorp-robolog = "0.0.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.255"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
pytest-regressions = "1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
