[tool.poetry]
name = "robocorp-devutils"
version = "0.0.1"
description = "Utilities for development in monorepo."
authors = [
	"Fabio Z. <fabio@robocorp.com>",
	"Cosmin P. <cosmin@robocorp.com>",
]
readme = "README.md"
packages = [{include = "devutils", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "^23.1.0"
ruff = "^0.1.14"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
pytest-regressions = "1.0.6"
pydocstyle = "^6.3.0"
isort = { version = "^5.12.0", python = "^3.8" }
types-invoke = "^2.0"
invoke = "^2.0"
lazydocs = { git = "https://github.com/robocorp/lazydocs.git" }
tomlkit = "^0.11.8"
semver = "^3.0.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
