[tool.poetry]
name = "robocorp-devutils"
version = "0.0.1"
description = "Utilities for development in monorepo."
authors = [
	"Fabio Z. <fabio@robocorp.com>",
	"Cosmin P. <cosmin@robocorp.com>",
	"Ovidiu R. <ovidiu@robocorp.com>",
]
readme = "README.md"
packages = [{include = "devutils", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
ruff = "^0.1.14"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
pytest-regressions = "1.0.6"
pydocstyle = { git = "https://github.com/robocorp/pydocstyle" }
isort = { version = "^5.12.0", python = "^3.8" }
types-invoke = "^2.0"
invoke = "^2.2.0"  # keep in sync with requirements.txt
lazydocs = { git = "https://github.com/robocorp/lazydocs.git" }
tomlkit = "^0.11.8"  # keep in sync with requirements.txt
semver = "^3.0.0"  # keep in sync with requirements.txt
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
