[tool.poetry]
name = "robocorp-devutils"
version = "0.0.2"
description = "Utilities for development in monorepo."
authors = ["Sema4.ai <dev@sema4.ai>"]
readme = "README.md"
packages = [{ include = "devutils", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
ruff = ">=0.11,<1"
mypy = "^1.1.1"
pytest = "^9.0.3"
pytest-xdist = "^3.2.1"
pytest-regressions = "^2.10.0"
pydocstyle = { git = "https://github.com/robocorp/pydocstyle" }
invoke = "^3.0.0"                                               # keep in sync with requirements.txt
lazydocs = { git = "https://github.com/robocorp/lazydocs.git" }
tomlkit = "^0.11.8"                                             # keep in sync with requirements.txt
semver = "^3.0.0"                                               # keep in sync with requirements.txt

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
