[tool.poetry]
name = "robocorp-docs"
version = "0.1.0"
description = ""
authors = [
	"Ossi R. <ossi@robocorp.com>",
	"Fabio Z. <fabio@robocorp.com>",
	"Kerkko P. <kerkko@robocorp.com>",
	"Antero V. <antero@robocorp.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
lazydocs = "0.4.8"
pydocstyle = "6.3.0"
mkdocs-awesome-pages-plugin="2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
