[tool.poetry]
name = "robocorp-excel"
version = "0.4.2"
description = "Robocorp Excel automation library"
authors = [
	"Fabio Z. <fabio@robocorp.com>",
	"Cosmin P. <cosmin@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{include = "robocorp", from="src"}]

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
pillow = ">=9.1.1,<11.0.0"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
xlutils = "^2.0.0"
openpyxl = "^3.0.9"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = {path = "../devutils/", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
