[tool.poetry]
name = "integration_tests"
version = "0.0.2"
description = "Robocorp integration tests"
authors = ["Sema4.ai <dev@sema4.ai>"]
readme = "README.md"
packages = [
    { include = "integration_tests", from = "tests" },

    { include = "robocorp_log_tests", from = "../log/tests" },

    { include = "tasks_tests", from = "../tasks/tests" },

    { include = "browser_tests", from = "../browser/tests" },
]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.50.0"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }
robocorp-browser = { path = "../browser/", develop = true }
robocorp-tasks = { path = "../tasks/", develop = true }
robocorp-log = { path = "../log/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "tests"
