[tool.poetry]
name = "libs-devdeps"
version = "0.1.0"
description = "Development dependencies for robo libraries. Shouldn't be published or installed on user machiines."
authors = [
	"Ossi R. <ossi@robocorp.com>",
	"Fabio Z. <fabio@robocorp.com>",
	"Kerkko P. <kerkko@robocorp.com>",
    "Antero V. <antero@robocorp.com>",
]
readme = "README.md"
packages = [{include = "_robo", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.1.0"
ruff = "^0.0.255"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
pytest-regressions = "1.0.6"
lazydocs = "0.4.8"
pydocstyle = "6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
