[tool.poetry]
name = "robocorp-log"
version = "1.2.0"
description = "Automatic trace logging for Python"
authors = [
    "Fabio Zadrozny <fabio@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robo/"
license = "Apache-2.0"
packages = [{include = "robocorp/log", from = "src"}]
include = ["**/_index.py", "**/_index_v2.py", "**/_index_v3.py"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
tomli = { version = "^2.0.1", python = "<3.11" }
psutil = "^5.9"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = {path = "../devutils/", develop = true}
types-psutil = "^5.9"

[tool.mypy]
mypy_path = "src:tests"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_timeout.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_timeout.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
