[tool.poetry]
name = "robocorp-log"
version = "3.0.1"
description = "Automatic trace logging for Python"
authors = [
	"Fabio Z. <fabio@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{include = "robocorp/log", from = "src"}]
include = ["**/_index.py", "**/_index_v2.py", "**/_index_v3.py"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9.2"
tomli = { version = "^2.0.1", python = "<3.11" }
psutil = ">=5.0,<8.0"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = {path = "../devutils/", develop = true}
types-psutil = ">=5.9"

[tool.mypy]
mypy_path = "src:tests"

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
    "E501", # Line-len.
    "F541", # f-string without placeholders.
    "E731", # Use 'def' instead of lambda.
]

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "greenlet.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_timeout.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_timeout.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
