[tool.poetry]
name = "robocorp-logging"
version = "0.0.4"
description = "Automatic trace logging for Python"
authors = [
    "Fabio Z. <fabio@robocorp.com>",
    "Ossi R. <ossi@robocorp.com>",
    "Kerkko P. <kerkko@robocorp.com>",
]
readme = "README.md"
packages = [{include = "robo_log", from = "src"}]
include = ["**/index.py", "**/index_v2.py"]

[tool.mypy]
mypy_path = "logging/src:logging/tests"

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_timeout.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_timeout.*"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
pytest-regressions = "1.0.6"
fire = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

