[tool.poetry]
name = "robocorp"
version = "1.4.1"
description = "Robocorp core libraries for Python automation"
authors = [
	"Fabio Z. <fabio@robocorp.com>",
	"Cosmin P. <cosmin@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{include = "robocorp", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
robocorp-tasks = "^2.8.1"
robocorp-log = "^2.8.1"
robocorp-workitems = "^1.4.2"
robocorp-vault = "^1.3.2"
robocorp-storage = "^1.0.3"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = {path = "../devutils/", develop = true}

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
