[tool.poetry]
name = "robocorp-storage"
version = "0.3.2"
description = "Robocorp Asset Storage library"
authors = [
	"Cosmin P. <cosmin@robocorp.com>",
	"Ossi R. <ossi@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robo/"
license = "Apache-2.0"
packages = [{include = "robocorp", from="src"}]

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.7.2"
requests = "^2.28.2"
tenacity = "^8.0.1"
typing-extensions = { version = "^4.6.3", python = "<3.8" }

[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }
types-requests = "^2.30.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
