[tool.poetry]
name = "robocorp-storage"
version = "1.1.0"
description = "Robocorp Asset Storage library"
authors = ["Sema4.ai <dev@sema4.ai>"]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{ include = "robocorp", from = "src" }]

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.28.2"
tenacity = ">=8.0.1"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }
types-requests = "^2.30.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src:tests"
